package visitor.model;

public interface Visitor {
    void visitConcreteElement(ConcreteElementA ce);
} 
